--- a/example/package.json
+++ b/example/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "gatsby": "^2.15.16",
+    "gatsby-theme-auth0": "^1.1.0",
     "gatsby-theme-minimal": "^1.0.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0"
