--- a/gatsby-theme-minimal/package.json
+++ b/gatsby-theme-minimal/package.json
@@ -2,9 +2,16 @@
   "name": "gatsby-theme-minimal",
   "version": "1.0.0",
   "main": "index.js",
-  "author": "christopherbiscardi <chris@christopherbiscardi.com> (@chrisbiscardi)",
+  "author": "Erik Stockmeier <erik.d.stock@gmail.com> (@erikdstock)",
   "license": "MIT",
   "peerDependencies": {
-    "gatsby": "^2.6.0"
+    "gatsby": "^2.15.16",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0"
+  },
+  "dependencies": {
+    "@types/auth0-js": "^9.10.6",
+    "auth0-js": "^9.11.3",
+    "gatsby-plugin-typescript": "^2.1.8"
   }
 }
