--- a/example/.env.example
+++ b/example/.env.example
@@ -1,4 +1,4 @@
-AUTH0_DOMAIN=
-AUTH0_CLIENTID=
-AUTH0_CALLBACK=http://localhost:8000/callback
+GATSBY_AUTH0_DOMAIN=
+GATSBY_AUTH0_CLIENTID=
+GATSBY_AUTH0_CALLBACK=http://localhost:8000/callback
 
