update to adopt sdome of @epilande's approach

--- a/example/.env.example
+++ b/example/.env.example
@@ -1,5 +1,11 @@
-GATSBY_AUTH0_DOMAIN=
-GATSBY_AUTH0_CLIENTID=
 GATSBY_APP_URL=http://localhost:8000
 
+# Required for Auth0
+AUTH0_DOMAIN=
+AUTH0_CLIENT_ID=
+AUTH0_CALLBACK_URL=
 
+# Optional
+AUTH0_AUDIENCE=
+AUTH0_RESPONSE_TYPE=
+AUTH0_SCOPE=
