gatsby-theme-auth0-ts v1.b
TODO:
- add tests
- README
- confirm types setup
- publish

--- a/gatsby-theme-auth0-ts/package.json
+++ b/gatsby-theme-auth0-ts/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gatsby-theme-auth0",
+  "name": "gatsby-theme-auth0-ts",
   "version": "1.0.0",
   "main": "index.js",
   "author": "Erik Stockmeier <erik.d.stock@gmail.com> (@erikdstock)",
