--- a/example/package.json
+++ b/example/package.json
@@ -2,7 +2,7 @@
   "name": "example",
   "version": "1.0.0",
   "main": "index.js",
-  "author": "christopherbiscardi <chris@christopherbiscardi.com> (@chrisbiscardi)",
+  "author": "Erik Stockmeier <erik.d.stock@gmail.com> (@erikdstock)",
   "license": "MIT",
   "scripts": {
     "develop": "gatsby develop",
@@ -11,8 +11,7 @@
   },
   "dependencies": {
     "gatsby": "^2.15.16",
-    "gatsby-theme-auth0": "^1.1.0",
-    "gatsby-theme-auth0": "^1.0.0",
+    "gatsby-theme-auth0-ts": "^1.0.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0"
   }
