tooling, cleanup and example tweaks

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "yarn workspace example develop",
     "serve": "yarn workspace example serve",
     "build": "yarn workspace example build",
+    "debug": "yarn workspace example debug",
     "type-check": "tsc",
     "lint": "eslint --ignore-path .gitignore . --ext ts --ext tsx --ext js --ext jsx",
     "lint:fix": "yarn lint --fix"
