--- a/example/package.json
+++ b/example/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "develop": "gatsby develop",
     "build": "gatsby build",
-    "serve": "gatsby serve"
+    "serve": "gatsby serve",
+    "debug": "node --inspect-brk ./node_modules/.bin/gatsby develop"
   },
   "dependencies": {
     "gatsby": "^2.15.16",
