--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gatsby-starter-theme-workspace",
   "private": true,
-  "version": "1.0.0",
+  "version": "1.0.1-0",
   "main": "index.js",
   "license": "MIT",
   "scripts": {
