--- a/example/package.json
+++ b/example/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "gatsby": "^2.15.16",
-    "gatsby-theme-auth0-ts": "^1.0.1-0",
+    "gatsby-theme-auth0-ts": "1.0.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0"
   }
