--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,19 +8,19 @@
     "strict": true,
     "noEmit": true, // Don't create files when running tsc
     "skipLibCheck": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "types": ["cypress", "@types/testing-library__cypress", "node"]
   },
   "include": [
     "**/gatsby-node.js",
     "**/gatsby-config.js",
     "**/gatsby-browser.js",
     "**/gatsby-ssr.js",
-    "./gatsby-theme-auth0-ts/src/**/*",
-    "gatsby-theme-auth0-ts/typings/index.d.ts",
-    // "./gatsby-theme-auth0-ts/index.ts",
-    // "./gatsby-theme-auth0-ts/typings",
+    "gatsby-theme-auth0-ts/index.d.ts",
+    "gatsby-theme-auth0-ts/index.js",
     "example/src/**/*.tsx",
     "example/src/**/*.ts",
+    "cypress/**/*.js",
     "example/src/**/*.js"
   ]
 }
