--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,18 +9,25 @@
     "noEmit": true, // Don't create files when running tsc
     "skipLibCheck": true,
     "esModuleInterop": true,
-    "types": ["cypress", "@types/testing-library__cypress", "node"]
+    "types": ["@types/testing-library__cypress", "node", "jest"]
   },
   "include": [
+    "gatsby-theme-auth0-ts/index.d.ts",
+    "gatsby-theme-auth0-ts/index.js",
+    "gatsby-theme-auth0-ts/src/**/*.tsx",
     "**/gatsby-node.js",
     "**/gatsby-config.js",
     "**/gatsby-browser.js",
     "**/gatsby-ssr.js",
-    "gatsby-theme-auth0-ts/index.d.ts",
-    "gatsby-theme-auth0-ts/index.js",
     "example/src/**/*.tsx",
     "example/src/**/*.ts",
+    "example/src/**/*.js",
     "cypress/**/*.js",
-    "example/src/**/*.js"
-  ]
+    "__jest__/**/*.ts",
+    "./jest.config.js",
+    "**/*.test.tsx",
+    "__jest__/jest-setup.js",
+    "__mocks__/*.js"
+  ],
+  "exclude": ["node_modules", "**/*.spec.ts", "**/*.test.ts"]
 }
