--- a/package.json
+++ b/package.json
@@ -64,5 +64,8 @@
     "react-testing-library": "^8.0.1",
     "ts-jest": "^24.1.0",
     "typescript": "^3.6.3"
+  },
+  "dependencies": {
+    "@babel/core": "^7.0.0-0"
   }
 }
