--- a/gatsby-theme-auth0-ts/package.json
+++ b/gatsby-theme-auth0-ts/package.json
@@ -1,9 +1,15 @@
 {
   "name": "gatsby-theme-auth0-ts",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "main": "index.js",
   "author": "Erik Stockmeier <erik.d.stock@gmail.com> (@erikdstock)",
   "license": "MIT",
+  "keywords": [
+    "gatsby",
+    "gatsby-theme",
+    "auth0",
+    "typescript"
+  ],
   "peerDependencies": {
     "gatsby": "^2.15.16",
     "react": "^16.9.0",
