--- a/gatsby-theme-auth0-ts/package.json
+++ b/gatsby-theme-auth0-ts/package.json
@@ -1,8 +1,13 @@
 {
   "name": "gatsby-theme-auth0-ts",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "main": "index.js",
+  "types": "index.d.ts",
   "author": "Erik Stockmeier <erik.d.stock@gmail.com> (@erikdstock)",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/erikdstock/gatsby-theme-auth0-ts.git"
+  },
   "license": "MIT",
   "keywords": [
     "gatsby",
